# app-store-connect-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY_AUDIT_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
clients/: claude.mcpServers.json.example  codex.config.toml.example  mcp.json.example
docs/: 90-DAY-SAAS-PROFITABILITY-PLAN.md  README.md  change-impact.md  cloud-setup.md  quick-start.md  self-host.md
docs/launch/: article-1-automated-aso.md  article-2-complete-guide.md  article-3-broken-aso.md  product-hunt.md
profiles/: .gitignore  clueless.env.example
src/: __init__.py  auth.py  change_log.py  client.py  config.py  errors.py  index.py  notifications.py  reports.py  revenuecat.py  subscriber_state.py  subscriber_webhook.py  tooling.py
src/cloud/: __init__.py  auth.py  billing.py  gateway.py  server.py  tenants.py
src/tools/: __init__.py  analysis.py  change_impact.py  cpp.py  diagnostics.py  generic.py  play.py  read.py  shared.py  subscriber.py  versioning.py  write.py
tests/: conftest.py  test_analysis.py  test_auth.py  test_change_impact.py  test_client.py  test_cloud.py  test_config.py  test_cpp_and_versioning.py  test_diagnostics.py  test_generic_and_subscriber.py  test_index_and_write.py  test_notifications.py  test_play_scaffolding.py  test_reports.py
web/: index.html  styles.css
