[project]
name = "app-store-connect-mcp"
version = "0.2.0"
description = "Reusable App Store Connect MCP server for listing, versioning, and experimentation workflows."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0",
  "mcp>=1.0.0",
  "PyJWT>=2.9.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E402"]
